# GooseFEM

./: .appveyor.yml  .ci_environment_docs.yaml  .ci_environment_py.yaml  .clang-format  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .readthedocsenv.yml  .travis.yml  Allocate_8h.html  Allocate_8h.js  Allocate_8h_source.html  Allocate_8hpp.html  Allocate_8hpp.js  Allocate_8hpp_source.html  CMakeLists.txt  ElementHex8_8h.html  ElementHex8_8h.js  ElementHex8_8h_source.html  ElementHex8_8hpp.html  ElementHex8_8hpp.js  ElementHex8_8hpp_source.html  ElementQuad4Axisymmetric_8h.html  ElementQuad4Axisymmetric_8h.js  ElementQuad4Axisymmetric_8h_source.html  ElementQuad4Axisymmetric_8hpp.html  ElementQuad4Axisymmetric_8hpp_source.html  ElementQuad4Planar_8h.html  ElementQuad4Planar_8h.js  ElementQuad4Planar_8h_source.html  ElementQuad4Planar_8hpp.html  ElementQuad4Planar_8hpp_source.html  ElementQuad4_8h.html  ElementQuad4_8h.js  ElementQuad4_8h_source.html  ElementQuad4_8hpp.html  ElementQuad4_8hpp.js  ElementQuad4_8hpp_source.html  Element_8h.html  Element_8h.js  (+328 more)
develop/: CMakeLists.txt  ElementHex8.cpp  ElementQuad4.cpp  Iterate.cpp  MatrixDiagonal.cpp  Vector.cpp  main.cpp  support.h
docs/: Doxyfile  (+26 more)
docs/examples/: CMakeLists.txt  dynamics_inertia-damping.rst  dynamics_inertia.rst  dynamics_overdamped.rst  environment.yaml  statics_linear.rst  statics_mixed-periodic.rst
docs/examples/Dynamics/: readme.rst
docs/examples/Dynamics/laminateElastic/noDamping/: CMakeLists.txt  main.cpp  main_velocityVerlet.cpp  plot.py
docs/examples/DynamicsPeriodicDiagonal/laminate/: CMakeLists.txt  main.cpp
docs/examples/DynamicsPeriodicDiagonal/laminate2/: CMakeLists.txt  DynamicsDiagonalQuad4.h  main.cpp
docs/examples/DynamicsPeriodicLinearStrain/laminate/: main.cpp
docs/examples/Mesh/: .gitignore  MeshHex8-FineLayer-nodes.py  MeshHex8-FineLayer-nodes_paraview.py  MeshHex8-FineLayer.py  MeshHex8-FineLayer_paraview.py  MeshHex8-Regular-nodes.py  MeshHex8-Regular-nodes_paraview.py  MeshHex8-Regular.py  MeshHex8-Regular_paraview.py  MeshQuad4-FineLayer-nodes.py  MeshQuad4-FineLayer-nodes_paraview.py  MeshQuad4-FineLayer.py  MeshQuad4-FineLayer_paraview.py  MeshQuad4-Regular-nodes.py  MeshQuad4-Regular-nodes_paraview.py  MeshQuad4-Regular.py  MeshQuad4-Regular_paraview.py  MeshTri3-Regular-nodes.py  MeshTri3-Regular-nodes_paraview.py  MeshTri3-Regular.py  MeshTri3-Regular_paraview.py
docs/examples/MeshTri3/: ReTri_random.py
docs/examples/ParaView/HDF5/: main.py
docs/examples/Statics/: LinearElasticity.cpp  test
docs/examples/Statics/LinearElasticity/: main.cpp  main_manualPartition.cpp
docs/examples/Statics/LinearElasticityPeriodic/: main.cpp
docs/examples/Statics/LinearElasticityPeriodicPartial/: main.cpp
docs/examples/dynamics/Elastic-VelocityVerlet/: CMakeLists.txt  main.cpp  plot.py
docs/examples/dynamics/Elastic-Verlet/: CMakeLists.txt  main.cpp  plot.py
docs/examples/implementation/: structure.cpp
docs/examples/statics/: fixed-displacement_elastic.py  fixed-displacement_elastic_manual-partition.py  partial-periodic_elastic.py  partial-periodic_elastic_sketch.idraw  periodic_elastoplastic.py  periodic_elastoplastic_finite-strain.py
docs/examples/statics/FixedDisplacements_LinearElastic/: CMakeLists.txt  example.cpp  example.py  example_realloc.cpp  example_realloc.py  manual_partition.cpp  manual_partition.py  plot.py
docs/examples/statics/MixedPeriodic_LinearElastic/: CMakeLists.txt  example.cpp  example.py
docs/examples/statics/Periodic_ElastoPlastic/: main.cpp  main.py  plot.py
docs/examples/statics/Periodic_ElastoPlasticFiniteStrainSimo/: CMakeLists.txt  main.cpp  plot.py
docs/examples/statics/Periodic_LinearElastic/: main.cpp  plot.py
docs/examples/statics/Periodic_NonLinearElastic/: main.cpp  plot.py
docs/examples/theory/Dynamics_diagonalMass_1d/: .gitignore  CMakeLists.txt  damping.py  example.cpp  example.py  geometry.py  main.cpp
docs/examples/theory/diagonal_mass/: readme.rst
docs/examples/theory/statics_small-strain_linear_dense/: fixedbnd-basic.cpp  fixedbnd.cpp  periodic-virtual-basic.cpp  periodic.cpp  readme.rst
docs/examples/theory/statics_small-strain_nonlinear_dense/: fixedbnd.cpp  periodic.cpp  readme.rst
src/: CMakeLists.txt  GooseFEM.pc.in
src/GooseFEM/: .gitignore  Dynamics.cpp  Dynamics.h  Dynamics.hpp  DynamicsDiagonal.cpp  DynamicsDiagonal.h  DynamicsDiagonalLinearStrainQuad4.h  DynamicsDiagonalPeriodic.h  DynamicsDiagonalQuad4.h  DynamicsDiagonalSemiPeriodic.h  DynamicsDiagonalSmallStrainQuad4.h  DynamicsPeriodicDiagonal.h  DynamicsPeriodicLinearStrain.h  Element.cpp  Element.h  Element.hpp  ElementHex8.h  ElementHex8.hpp  ElementQuad4.cpp  ElementQuad4.h  ElementQuad4.hpp  GooseFEM.h  Iterate.cpp  Iterate.h  Macros.h  MatrixDiagonal.cpp  MatrixDiagonal.h  MatrixDiagonal.hpp  Mesh.cpp  Mesh.h  Mesh.hpp  MeshHex8.cpp  MeshHex8.h  MeshHex8.hpp  MeshQuad4.cpp  MeshQuad4.h  MeshQuad4.hpp  MeshTri3.cpp  MeshTri3.h  OverdampedDynamicsDiagonal.cpp  (+8 more)
test/: CMakeLists.txt  ElementHex8.cpp  ElementQuad4.cpp  Example_hybrid-material.cpp  Iterate.cpp  Matrix.cpp  MatrixDiagonal.cpp  Mesh.cpp  MeshQuad4.cpp  Vector.cpp  VectorPartitioned.cpp  main.cpp  support.h
test/basic/: Allocate.cpp  CMakeLists.txt  Element.cpp  ElementHex8.cpp  ElementQuad4.cpp  ElementQuad4Planar.cpp  Iterate.cpp  Matrix.cpp  MatrixDiagonal.cpp  MatrixDiagonalPartitioned.cpp  MatrixParitioned.cpp  Mesh.cpp  MeshHex8.cpp  MeshQuad4.cpp  MeshQuad4_FineLayer.cpp  MeshQuad4_Map.cpp  MeshQuad4_Regular.cpp  MeshTri3.cpp  Vector.cpp  VectorPartitioned.cpp  Version.cpp  version.cpp
test/gmat/: CMakeLists.txt  hybrid-elastic.cpp  hybrid-elastoplasticqpot.cpp  main.cpp
tests/basic/: Allocate.cpp  CMakeLists.txt  Element.cpp  ElementHex8.cpp  ElementQuad4.cpp  ElementQuad4Planar.cpp  Iterate.cpp  Matrix.cpp  MatrixDiagonal.cpp  MatrixDiagonalPartitioned.cpp  MatrixParitioned.cpp  Mesh.cpp  MeshHex8.cpp  MeshQuad4.cpp  MeshTri3.cpp  Vector.cpp  VectorPartitioned.cpp  version.cpp
tests/gmat/: CMakeLists.txt  hybrid-elastic.cpp  hybrid-elastoplasticqpot.cpp
(+333 files in other folders)
